@startuml DeadlineClassDiagram

left to right direction
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0
skinparam DefaultFontSize 30
skinparam ArrowFontSize 30

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

interface Timed <<interface>> {
    + getDate() : LocalDateTime
}

abstract class "{abstract}\nTask" as Task{
    # description : String
    # isDone : boolean
    + toString() : String
    + toFileFormat() : String
}

class Deadline {
    - logger : Logger {static}
    # by : LocalDateTime
    + Deadline(description : String, by : LocalDateTime)
    + parseDateTime(input : String) : LocalDateTime {static}
    + getBy() : LocalDateTime
    + getDate() : LocalDateTime
    + toFileFormat() : String
    + toString() : String
}

class DeadlineList {
    + DeadlineList()
    + toString() : String
    + sortByDate() : void
    + clearAll() : void
    + getLatest() : Deadline
}

class "TaskList<T>" as TaskListT {
}

class "TaskList<Deadline>" as TaskListDeadline {
}


class DateUtils {
    - FULL_FORMATTER : DateTimeFormatter {static}
    - DATE_ONLY_FORMATTER : DateTimeFormatter {static}
    - TIME_ONLY_FORMATTER : DateTimeFormatter {static}
    + parse(input : String, isLoading : boolean) : LocalDateTime {static}
    + parseDateTime(input : String) : LocalDateTime {static}
    + parseDateTimeFromFile(input : String) : LocalDateTime {static}
    + parseLocalDate(input : String) : LocalDate {static}
    - validateNotPast(parsedDate : LocalDateTime, originalInput : String) : void {static}
    - validateYearRange(parsedDate : LocalDateTime, originalInput : String) : void {static}
}

class Calendar {
    - schedule : TreeMap<LocalDate, List<Task>>
    + registerTask(task : Task) : void
    + displayRange(start : LocalDate, end : LocalDate) : void
    + displaySpecificTypeInRange(start : LocalDate, end : LocalDate, taskType : Class<T>) : void
    + getTaskCountOnDate(date : LocalDate) : int
    + clear() : void
}

Task <|-- Deadline
Timed <|.. Deadline
TaskListT <.. TaskListDeadline
TaskListDeadline <|-- DeadlineList
DeadlineList *-- "0..*" Deadline :  ◀ added to
Deadline .. DateUtils : uses ▶
Calendar "1" o-- "0..*" Deadline : ◀ registered to

note right of Deadline
  getDate() delegates to getBy()
  so Calendar can store Deadline
  without knowing its concrete type.
end note

note bottom of DeadlineList
  sortByDate() uses
  Comparator.comparing(Deadline::getBy)
end note

@enduml
